DMC-E系列控制卡例程/VB6.0/例3_回原点运动/LTDMC.bas

        
         '单轴高速位置比较函数
        Declare Function dmc_hcmp_set_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal cmp_mode As Integer) As Integer
        Declare Function dmc_hcmp_get_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef cmp_mode As Integer) As Integer
        Declare Function dmc_hcmp_set_config_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal axis As Integer, ByVal cmp_source As Integer, ByVal cmp_logic As Integer, ByVal cmp_mode As Integer, ByVal Dist As Long, ByVal time As Long) As Integer
        Declare Function dmc_hcmp_get_config_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef axis As Integer, ByRef cmp_source As Integer, ByRef cmp_logic As Integer, ByRef cmp_mode As Integer, ByRef Dist As Long, ByRef time As Long) As Integer
        Declare Function dmc_hcmp_set_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal axis As Integer, ByVal cmp_source As Integer, ByVal cmp_logic As Integer, ByVal time As Long) As Integer
        Declare Function dmc_hcmp_get_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef axis As Integer, ByRef cmp_source As Integer, ByRef cmp_logic As Integer, ByRef time As Long) As Integer
        Declare Function dmc_hcmp_add_point Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal cmp_pos As Long) As Integer
        Declare Function dmc_hcmp_set_liner Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal Increment As Long, ByVal Count As Long) As Integer
        Declare Function dmc_hcmp_get_liner Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef Increment As Long, ByRef Count As Long) As Integer
        Declare Function dmc_hcmp_get_current_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef remained_points As Long, ByRef current_point As Long, ByRef runned_points As Long) As Integer
        Declare Function dmc_hcmp_clear_points Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer) As Integer
        Declare Function dmc_read_cmp_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer) As Integer
        Declare Function dmc_write_cmp_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal on_off As Integer) As Integer
         '二维高速位置比较功能
        Declare Function dmc_hcmp_2d_set_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal cmp_enable As Integer) As Integer
        Declare Function dmc_hcmp_2d_get_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef cmp_enable As Integer) As Integer
        Declare Function dmc_hcmp_2d_set_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal cmp_mode As Integer, ByVal x_axis As Integer, ByVal x_cmp_source As Integer, ByVal y_axis As Integer, ByVal y_cmp_source As Integer, ByVal error As Long, ByVal cmp_logic As Integer, ByVal time As Long, ByVal pwm_enable As Integer, ByVal duty As Double, ByVal freq As Long, ByVal port_sel As Integer, ByVal pwm_number As Integer) As Integer
        Declare Function dmc_hcmp_2d_get_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef cmp_mode As Integer, ByRef x_axis As Integer, ByRef x_cmp_source As Integer, ByRef y_axis As Integer, ByRef y_cmp_source As Integer, ByRef error As Long, ByRef cmp_logic As Integer, ByRef time As Long, ByRef pwm_enable As Integer, ByRef duty As Double, ByRef freq As Long, ByRef port_sel As Integer, ByRef pwm_number As Integer) As Integer
        Declare Function dmc_hcmp_2d_add_point Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal x_cmp_pos As Long, ByVal y_cmp_pos As Long) As Integer
        Declare Function dmc_hcmp_2d_get_current_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByRef remained_points As Long, ByRef x_current_point As Long, ByRef y_current_point As Long, ByRef runned_points As Long, ByRef current_state As Integer) As Integer
        Declare Function dmc_hcmp_2d_clear_points Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer) As Integer
        Declare Function dmc_hcmp_2d_force_output Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal hcmp As Integer, ByVal enable As Integer) As Integer
        
        '通用IO
        Declare Function dmc_read_inbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer            '读取输入口的状态
        Declare Function dmc_write_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal on_off As Integer) As Integer         '设置输出口的状态
        Declare Function dmc_read_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer           '读取输出口的状态
        Declare Function dmc_read_inport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer) As Long     '读取输入端口的值
        Declare Function dmc_read_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer) As Long            '读取输出端口的值
        Declare Function dmc_write_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer, ByVal outport_val As Long) As Integer       '设置输出端口的值
        Declare Function dmc_write_outport_16X Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal portno As Integer, ByVal outport_val As Long) As Integer
        'DMC5800专用 虚拟IO映射  用于读取滤波后的IO口电平状态
        Declare Function dmc_set_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal MapIoType As Integer, ByVal MapIoIndex As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_get_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef MapIoType As Integer, ByRef MapIoIndex As Integer, ByRef filter As Double) As Integer
        Declare Function dmc_read_inbit_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer
        
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_reverse_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal reverse_time As Double) As Integer
        Declare Function dmc_set_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal mode As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_get_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef mode As Integer, ByRef filter As Double) As Integer
        Declare Function dmc_set_io_count_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal CountValue As Long) As Integer
        Declare Function dmc_get_io_count_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef CountValue As Long) As Integer
        
        '3800,3600,5800,5600专用 轴IO映射配置
        'Declare Function dmc_set_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal MsgType As Integer, ByVal MapPortType As Integer, ByVal MapPortIndex As Integer, ByVal Filter As Long) As Integer
        'Declare Function dmc_get_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal MsgType As Integer, ByRef MapPortType As Integer, ByRef MapPortIndex As Integer, ByRef Filter As Long) As Integer
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_set_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IoType As Integer, ByVal MapIoType As Integer, ByVal MapIoIndex As Integer, ByVal filter As Double) As Integer
        Declare Function dmc_get_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IoType As Integer, ByRef MapIoType As Integer, ByRef MapIoIndex As Integer, ByRef filter As Double) As Integer
        Declare Function dmc_set_special_input_filter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal filter_time As Double) As Integer      '设置所有专用IO滤波时间
       
        '3410专用 回原点中的减速信号
        Declare Function dmc_set_sd_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal sd_logic As Integer, ByVal sd_mode As Integer) As Integer      '设置SD信号
        Declare Function dmc_get_sd_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef sd_logic As Integer, ByRef sd_mode As Integer) As Integer    '读取设置SD信号
  
        '伺服专用IO
        Declare Function dmc_set_inp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal inp_logic As Integer) As Integer      '设置INP信号
        Declare Function dmc_get_inp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef inp_logic As Integer) As Integer  '读取设置INP信号
        Declare Function dmc_set_rdy_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal rdy_logic As Integer) As Integer
        Declare Function dmc_get_rdy_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef rdy_logic As Integer) As Integer
        Declare Function dmc_set_erc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal erc_logic As Integer, ByVal erc_width As Integer, ByVal erc_off_time As Integer) As Integer   '设置ERC信号
        Declare Function dmc_get_erc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef erc_logic As Integer, ByRef erc_width As Integer, ByRef erc_off_time As Integer) As Integer   '读取设置ERC信号
        Declare Function dmc_set_alm_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal alm_logic As Integer, ByVal alm_action As Integer) As Integer '设置ALM信号
        Declare Function dmc_get_alm_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef alm_logic As Integer, ByRef alm_action As Integer) As Integer     '读取设置ALM信号
        Declare Function dmc_set_ez_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal ez_logic As Integer, ByVal ez_mode As Integer, ByVal filter As Double) As Integer       '设置EZ信号
        Declare Function dmc_get_ez_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef ez_logic As Integer, ByRef ez_mode As Integer, ByRef filter As Double) As Integer     '读取设置EZ信号

        Declare Function dmc_write_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal on_off As Integer) As Integer       '输出SEVON信号
        Declare Function dmc_read_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer         '读取SEVON信号
        Declare Function dmc_read_rdy_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer           '读取RDY状态
        Declare Function dmc_write_erc_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal on_off As Integer) As Integer    '控制ERC信号输出
        Declare Function dmc_read_erc_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer    '读取ERC信号输出端口
        Declare Function dmc_write_sevrst_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal on_off As Integer) As Integer
        Declare Function dmc_read_sevrst_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
